# hardlinker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
app/: config.py  database.py  main.py  models.py
app/core/: linker.py  orchestrator.py  scanner.py  scheduler.py
app/routes/: api.py  pages.py  sse.py
app/templates/: base.html  dashboard.html
